add inference demo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,10 @@ services:
     env_file:
       - config.env
     links:
-      - client
-      - node-server
+      - client-inferred
+      - client-sc
+      - server-with-service-catalog
+      - server-with-shortsha-version
     environment:
       - DD_APM_NON_LOCAL_TRAFFIC=true
       - DD_APM_ENABLED=true
@@ -14,16 +16,32 @@ services:
       - /proc/:/host/proc/:ro
       - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
 
-  client:
+  client-inferred:
     build:
       context:
         ./client
     environment:
-      - SERVER_HOST=node-server
+      - SERVER_HOST=server-with-shortsha-version
 
-  node-server:
+  client-sc:
+    build:
+      context:
+        ./client
+    environment:
+      - SERVER_HOST=server-with-service-catalog
+
+  server-with-shortsha-version:
     build:
       context: ./node-server
     environment:
       - DD_AGENT_HOST=datadog-agent
-      - DD_VERSION=${VERSION}
+      - DD_VERSION=v1.2.6-${COMMIT}
+      - DD_SERVICE=server-with-shortsha-version
+
+  server-with-service-catalog:
+    build:
+      context: ./node-server
+    environment:
+      - DD_AGENT_HOST=datadog-agent
+      - DD_VERSION=1.2.6
+      - DD_SERVICE=datadog-sci-demo
