--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,9 @@ services:
       context: ./node-server
       args:
         - DD_GIT_REPOSITORY_URL=https://github.com/olivwalsh/datadog-sci-demo
-        - DD_GIT_COMMIT_SHA=${DD_GIT_COMMIT_SHA:-$(git rev-parse HEAD)}
+        - DD_GIT_COMMIT_SHA=${DD_GIT_COMMIT_SHA}
     environment:
       - DD_AGENT_HOST=datadog-agent
       - DD_SERVICE=olivia-test
       - DD_GIT_REPOSITORY_URL=https://github.com/olivwalsh/datadog-sci-demo
-      - DD_GIT_COMMIT_SHA=${DD_GIT_COMMIT_SHA:-$(git rev-parse HEAD)}
+      - DD_GIT_COMMIT_SHA=${DD_GIT_COMMIT_SHA}
