--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - config.env
     links:
       - client-test
-      - olivia-test
+      - sales-demo
     environment:
       - DD_APM_NON_LOCAL_TRAFFIC=true
       - DD_APM_ENABLED=true
@@ -18,11 +18,11 @@ services:
     build:
       context: ./client
     environment:
-      - SERVER_HOST=olivia-test
+      - SERVER_HOST=sales-demo
 
-  olivia-test:
+  sales-demo:
     build:
       context: ./node-server
     environment:
       - DD_AGENT_HOST=datadog-agent
-      - DD_SERVICE=olivia-test
+      - DD_SERVICE=sales-demo
