--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,10 @@ services:
   sales-demo:
     build:
       context: ./node-server
+      args:
+        DD_GIT_REPOSITORY_URL: ${DD_GIT_REPOSITORY_URL}
+        DD_GIT_COMMIT_SHA: ${DD_GIT_COMMIT_SHA}
+        DD_TAGS: ${DD_TAGS}
     environment:
       - DD_AGENT_HOST=datadog-agent
       - DD_SERVICE=sales-demo
